added a pdf file to display. created paths. touched up the .html(s) to add buttons and ways of navigating

--- a/about.html
+++ b/about.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
+
+<h1>This is the <em>ABOUT</em> page!</h1>
+
+<nav>
+    <a href="/">Home Page</a>
+</nav>
+
+
     
 </body>
 </html>
