--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
-    
+        
+    <h1>
+        This is the <em>HOME</em> page!
+    </h1>
+
+    <nav>
+        <a href="/about">About Page</a>
+    </nav>
+
+    <button onclick="changeTime()">
+        Change Current Time
+    </button>
+
+    <div id="timeDisplay">
+
+    </div>
+
+    <script src="index.js"></script>
+
 </body>
 </html>
