simplified the DOM manipulation for the project

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <a href="/about">About Page</a>
     </nav>
 
-    <button onclick="changeTime()">
+    <button onclick="buttonPushed()">
         Change Current Time
     </button>
 
-    <div id="timeDisplay">
+    <div id="pressedButton">
 
     </div>
 
