Forgot to change what the button said when I was editing the DOM manipulation. Button text has be changed to reflect.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
 
     <button onclick="buttonPushed()">
-        Change Current Time
+        Press the Button!
     </button>
 
     <div id="pressedButton">
