Wrote the final readme.md and added the image to the about.html

--- a/about.html
+++ b/about.html
@@ -13,7 +13,11 @@
     <a href="/">Home Page</a>
 </nav>
 
+<p>
+    This project is about creating a simple Node.js web server!
+</p>
 
+<img src="Media/Example PDF.pdf" alt="Text explaining that this is a example PDF">
     
 </body>
 </html>
